adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
      <h1>Meu primeiro site de HTML</h1>
      <hr>
      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae vel sint deleniti ad accusamus amet, sed tempora omnis cupiditate hic expedita sit atque exercitationem minima sapiente porro obcaecati eligendi in.</p>
+     <hr>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, nam! Quia quas repudiandae ut unde ipsum nihil odio accusamus, praesentium temporibus facere optio nisi aliquid explicabo consectetur, architecto ullam voluptas.</p>
 </body>
 </html>
